--- a/.github/workflows/dailyClone1.yml
+++ b/.github/workflows/dailyClone1.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
   repository_dispatch:
   schedule:
-    - cron: 53 15/5 * * *
+    - cron: 53 15,5 * * *
 
 jobs:
   get_points:
